[package]
name = "waker-waiter"
version = "0.2.1"
authors = ["Justin Karneges <justin@karneges.com>"]
license = "MIT"
description = "Helps async runtimes interoperate with arbitrary futures"
repository = "https://github.com/jkarneges/waker-waiter"
readme = "README.md"
edition = "2021"

[dependencies]

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
